# pasu-profile-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: cache.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  state.rs
src/handlers/: about.rs  admin.rs  blog.rs  contact.rs  experience.rs  health.rs  mod.rs  projects.rs  skills.rs  upload.rs
tests/: error_tests.rs  models_tests.rs
tests/handlers/: about_tests.rs  admin_tests.rs  blog_tests.rs  contact_tests.rs  experience_tests.rs  mod.rs  projects_tests.rs  skills_tests.rs  upload_tests.rs
