[package]
name = "pasu-profile-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "pasu_profile_backend"
path = "src/lib.rs"

[[bin]]
name = "pasu-profile-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7.5", features = ["multipart"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1.37.0", features = ["full", "net"] }
tower-http = { version = "0.5.2", features = ["cors", "trace", "fs"] }

# Swagger UI
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "uuid"] }

# Environment variables
dotenvy = "0.15"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
uuid = { version = "1.8", features = ["serde", "v4"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Password hashing / Cryptography / Utils
rand = "0.8"
base64 = "0.22"
sha1 = "0.10.6"

# Cloudinary HTTP requests (instead of full SDK, we can use reqwest)
reqwest = { version = "0.12", features = ["json", "multipart"] }

# In-memory caching
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
